[gd_scene load_steps=7 format=2]

[ext_resource path="res://InGamePopupMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Menu Box.png" type="Texture" id=2]
[ext_resource path="res://assets/Nunito-Light.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 1
outline_color = Color( 0.3479, 0.420887, 0.59375, 1 )
use_mipmaps = true
extra_spacing_char = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 24
outline_color = Color( 0.352941, 0.427451, 0.6, 1 )
use_mipmaps = true
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 28
outline_size = 1
outline_color = Color( 0.230408, 0.358207, 0.589844, 1 )
use_mipmaps = true
extra_spacing_char = 5
font_data = ExtResource( 3 )

[node name="InGamePopupMenu" type="PopupPanel"]
pause_mode = 2
margin_left = -11.4157
margin_top = -12.1291
margin_right = -3.41566
margin_bottom = -4.12914
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 506.892, 301.66 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 195, 56, 2524, 1927 )

[node name="TextItems" type="Node2D" parent="."]

[node name="MenuLabel" type="RichTextLabel" parent="TextItems"]
light_mask = 0
margin_left = 412.529
margin_top = 155.427
margin_right = 600.529
margin_bottom = 198.427
mouse_filter = 1
size_flags_stretch_ratio = 0.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.796078, 0.831373, 0.894118, 1 )
meta_underlined = false
text = "PAUSED"
scroll_active = false

[node name="ExitToOpeningButton" type="ToolButton" parent="TextItems"]
pause_mode = 2
margin_left = 346.7
margin_top = 246.358
margin_right = 667.7
margin_bottom = 294.358
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "EXIT TO MAIN MENU"

[node name="QuitButton" type="ToolButton" parent="TextItems"]
pause_mode = 2
margin_left = 412.945
margin_top = 297.025
margin_right = 592.945
margin_bottom = 345.025
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "QUIT GAME"

[node name="CloseButton" type="ToolButton" parent="TextItems"]
pause_mode = 2
margin_left = 434.767
margin_top = 380.961
margin_right = 564.767
margin_bottom = 433.961
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "CLOSE"

[connection signal="pressed" from="TextItems/ExitToOpeningButton" to="." method="_on_ExitToOpeningButton_pressed"]
[connection signal="pressed" from="TextItems/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="TextItems/CloseButton" to="." method="_on_CloseButton_pressed"]
